@@ -11,6 +11,9 @@ Changes in trunk
 * sphinx.environment: Move doctest_blocks out of block_quotes to
   support indented doctest blocks.
 
+* sphinx.ext.autodoc: Render .. automodule:: docstrings in a setion
+  node, so that module docstrings can contain proper sectioning.
+
 
 Release 0.1.61611 (Mar 21, 2008)
 ================================
